# cuda_pointpillar_ros

./: CMakeLists.txt  package.xml
log/: latest_list
src/: CMakeLists.txt  original-main.cpp  pointpillar_wrapper.cpp  pp_node.cpp
src/eval/kitti/object/pred_velo/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt
src/include/: pointpillar_wrapper.h
